# tempest-watch

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.claude/: README.md
.claude/commands/: commit.md  pr.md
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/src/api/: main.py
backend/src/core/: config.py  errors.py  logging.py
backend/src/db/: base.py  session.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: a1b2c3d4e5f6_add_cards_and_card_price_snapshots.py
backend/src/models/: __init__.py  card.py  card_price_snapshot.py
backend/src/sources/: pokemontcg.py
backend/tests/: conftest.py
deploy/: docker-compose.yml
docs/: CODE_STYLE.md  CONVENTIONS.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: app.tsx  index.css  main.tsx
