[project]
name = "tempest-watch-backend"
version = "0.1.0"
description = "Backend for the tempest-watch Pokémon TCG price-tracking system."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "structlog>=24.4",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM"]

[tool.mypy]
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
